@@ -1,3 +1,5 @@
+DIST emacs-common-gentoo-1.2.tar.gz 46622 RMD160 88c923d05286b53687e1099294fb579a2f4f5d39 SHA1 4712b6186d4620aaa5258236367d3228f515f341 SHA256 d15f9654214b10e9efc9e38fe45b4e08c3f0cc1c975de34058e4d360d3053108
+EBUILD emacs-common-gentoo-1.2-r2.ebuild 4066 RMD160 cc4e2771f91665f89114f8241ebbc7d3a3038e21 SHA1 2057f8828c208e2fd905f006a0e461ca7e66fdd6 SHA256 83f96bad691faaed82c7b71212a90dce2e8837ec4476182f5a4b5264b2e63204
 EBUILD emacs-common-gentoo-9999.ebuild 3976 RMD160 1c166fabac0cd4ec74d281b5e5b281094f6e84e7 SHA1 da69ec355e9b886af7fd50a5ec58df969c364422 SHA256 f66fe28be3867de08facd4dff0919b338c80c19534475160ffbe38a41e7d374c
-MISC ChangeLog 1452 RMD160 93aae102da6ff1873ff6b01abb435b98ec8015ed SHA1 8fd2785a858fe8674d0e97f73e24509d91174556 SHA256 345435bbd4debe241fcb8e4c15937bc4d412b581fb3eeabb3d6d5edc27f33fde
+MISC ChangeLog 1591 RMD160 c04a4bbeb36e6508462add675de17e42f2312f94 SHA1 e70fe9d1bb48a9894eb35dddc3764138a5e124b7 SHA256 f79c1ce310448071c781e37251039ee3ec5b54c4a1887874830dbbe871d21c88
 MISC metadata.xml 235 RMD160 94ec7acf062c24ce7a5c9b98fff11c2a68baf269 SHA1 c948e0bb625876a97f14834fe5848367dda93628 SHA256 81f928a2ff996d91f098bc1d718adec61bbb6afa1f8e5f1b29f0931a73902ec1
